# Epona

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
Epona/: CMakeLists.txt  EponaMathConfig.cmake.in  EponaVersionInfo.rc.in
Epona/cmake/: GlmConfig.cmake
Epona/include/Epona/: Analysis.hpp  Debug.hpp  FloatingPoint.hpp  HalfEdgeDataStructure.hpp  HyperPlane.hpp  JacobiEigenvalue.hpp  QuickhullConvexHull.hpp
Epona/include/Epona/debug/: DebugDummy.hpp  DebugImplementation.hpp
Epona/sources/: Analysis.cpp  HalfEdgeDataStructure.cpp  HyperPlane.cpp  JacobiEigenvalue.cpp
cmake/: EponaConfig.cmake
demo/: CMakeLists.txt  Main.cpp
test/: AnalysisTests.cpp  CMakeLists.txt
